// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="wmstool-list wmstool-list-split"
>
  <div>
    <div
      class="wmstool-spin-nested-loading"
    >
      <div
        class="wmstool-spin-container"
      >
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-meta"
          >
            <div
              class="wmstool-list-item-meta-avatar"
            >
              <span
                class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="wmstool-list-item-meta-content"
            >
              <h4
                class="wmstool-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 1
                </a>
              </h4>
              <div
                class="wmstool-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-meta"
          >
            <div
              class="wmstool-list-item-meta-avatar"
            >
              <span
                class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="wmstool-list-item-meta-content"
            >
              <h4
                class="wmstool-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 2
                </a>
              </h4>
              <div
                class="wmstool-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-meta"
          >
            <div
              class="wmstool-list-item-meta-avatar"
            >
              <span
                class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="wmstool-list-item-meta-content"
            >
              <h4
                class="wmstool-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 3
                </a>
              </h4>
              <div
                class="wmstool-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-meta"
          >
            <div
              class="wmstool-list-item-meta-avatar"
            >
              <span
                class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="wmstool-list-item-meta-content"
            >
              <h4
                class="wmstool-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  Ant Design Title 4
                </a>
              </h4>
              <div
                class="wmstool-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="wmstool-list wmstool-list-split wmstool-list-grid"
>
  <div>
    <div
      class="wmstool-spin-nested-loading"
    >
      <div
        class="wmstool-spin-container"
      >
        <div
          class="wmstool-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="wmstool-col-6"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-6"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-6"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-6"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="wmstool-list wmstool-list-split"
    >
      <div>
        <div
          class="wmstool-spin-nested-loading"
        >
          <div
            class="wmstool-spin-container"
          >
            <div
              class="wmstool-list-empty-text"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="wmstool-list wmstool-list-split"
>
  <div>
    <div
      class="wmstool-spin"
    >
      <span
        class="wmstool-spin-dot"
      >
        <i />
        <i />
        <i />
        <i />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="wmstool-list demo-loadmore-list wmstool-list-split wmstool-list-loading wmstool-list-something-after-last-item"
>
  <div>
    <div
      class="wmstool-spin-nested-loading"
    >
      <div>
        <div
          class="wmstool-spin wmstool-spin-spinning"
        >
          <span
            class="wmstool-spin-dot"
          >
            <i />
            <i />
            <i />
            <i />
          </span>
        </div>
      </div>
      <div
        class="wmstool-spin-container wmstool-spin-blur"
      >
        <div
          class="wmstool-list-empty-text"
        >
          No data
        </div>
      </div>
    </div>
    <div
      style="text-align:center;margin-top:12px;height:32px;line-height:32px"
    >
      <button
        class="wmstool-btn"
        type="button"
      >
        <span>
          loading more
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="wmstool-list wmstool-list-split wmstool-list-grid"
>
  <div>
    <div
      class="wmstool-spin-nested-loading"
    >
      <div
        class="wmstool-spin-container"
      >
        <div
          class="wmstool-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="wmstool-col-xs-24 wmstool-col-sm-12 wmstool-col-md-6 wmstool-col-lg-6 wmstool-col-xl-4"
          >
            <div
              class="wmstool-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="wmstool-list-item-content wmstool-list-item-content-single"
              >
                <div
                  class="wmstool-card wmstool-card-bordered"
                >
                  <div
                    class="wmstool-card-head"
                  >
                    <div
                      class="wmstool-card-head-wrapper"
                    >
                      <div
                        class="wmstool-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="wmstool-card-body"
                  >
                    <div>
                      Card content
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="wmstool-list wmstool-list-split wmstool-list-bordered wmstool-list-something-after-last-item"
  >
    <div
      class="wmstool-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="wmstool-spin-nested-loading"
      >
        <div
          class="wmstool-spin-container"
        >
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="wmstool-list wmstool-list-sm wmstool-list-split wmstool-list-bordered wmstool-list-something-after-last-item"
  >
    <div
      class="wmstool-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="wmstool-spin-nested-loading"
      >
        <div
          class="wmstool-spin-container"
        >
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="wmstool-list wmstool-list-lg wmstool-list-split wmstool-list-bordered wmstool-list-something-after-last-item"
  >
    <div
      class="wmstool-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="wmstool-spin-nested-loading"
      >
        <div
          class="wmstool-spin-container"
        >
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="wmstool-list-item"
          >
            <div
              class="wmstool-list-item-content wmstool-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="wmstool-list wmstool-list-vertical wmstool-list-lg wmstool-list-split wmstool-list-something-after-last-item"
>
  <div>
    <div
      class="wmstool-spin-nested-loading"
    >
      <div
        class="wmstool-spin-container"
      >
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-extra-wrap"
          >
            <div
              class="wmstool-list-item-main"
            >
              <div
                class="wmstool-list-item-meta"
              >
                <div
                  class="wmstool-list-item-meta-avatar"
                >
                  <span
                    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="wmstool-list-item-meta-content"
                >
                  <h4
                    class="wmstool-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 0
                    </a>
                  </h4>
                  <div
                    class="wmstool-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="wmstool-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="wmstool-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="anticon anticon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="wmstool-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-extra-wrap"
          >
            <div
              class="wmstool-list-item-main"
            >
              <div
                class="wmstool-list-item-meta"
              >
                <div
                  class="wmstool-list-item-meta-avatar"
                >
                  <span
                    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="wmstool-list-item-meta-content"
                >
                  <h4
                    class="wmstool-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 1
                    </a>
                  </h4>
                  <div
                    class="wmstool-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="wmstool-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="wmstool-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="anticon anticon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="wmstool-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-extra-wrap"
          >
            <div
              class="wmstool-list-item-main"
            >
              <div
                class="wmstool-list-item-meta"
              >
                <div
                  class="wmstool-list-item-meta-avatar"
                >
                  <span
                    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="wmstool-list-item-meta-content"
                >
                  <h4
                    class="wmstool-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 2
                    </a>
                  </h4>
                  <div
                    class="wmstool-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="wmstool-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="wmstool-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="anticon anticon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="wmstool-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-extra-wrap"
          >
            <div
              class="wmstool-list-item-main"
            >
              <div
                class="wmstool-list-item-meta"
              >
                <div
                  class="wmstool-list-item-meta-avatar"
                >
                  <span
                    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="wmstool-list-item-meta-content"
                >
                  <h4
                    class="wmstool-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 3
                    </a>
                  </h4>
                  <div
                    class="wmstool-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="wmstool-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="wmstool-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="anticon anticon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="wmstool-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="wmstool-list-item"
        >
          <div
            class="wmstool-list-item-extra-wrap"
          >
            <div
              class="wmstool-list-item-main"
            >
              <div
                class="wmstool-list-item-meta"
              >
                <div
                  class="wmstool-list-item-meta-avatar"
                >
                  <span
                    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="wmstool-list-item-meta-content"
                >
                  <h4
                    class="wmstool-list-item-meta-title"
                  >
                    <a
                      href="http://ant.design"
                    >
                      ant design part 4
                    </a>
                  </h4>
                  <div
                    class="wmstool-list-item-meta-description"
                  >
                    Ant Design, a design language for background applications, is refined by Ant UED Team.
                  </div>
                </div>
              </div>
              <div
                class="wmstool-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="wmstool-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="anticon anticon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="wmstool-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="anticon anticon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="wmstool-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-list-pagination"
    >
      <ul
        class="wmstool-pagination "
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="wmstool-pagination-disabled wmstool-pagination-prev"
          tabindex="0"
          title="Previous Page"
        >
          <a
            class="wmstool-pagination-item-link"
          />
        </li>
        <li
          class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="wmstool-pagination-disabled wmstool-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <a
            class="wmstool-pagination-item-link"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
